--- a/pages/setorCircular.html
+++ b/pages/setorCircular.html
@@ -76,18 +76,13 @@
             <h3>Vamos calcular a área?</h3>
             <br>
             <div class="mb-3">
-                <label for="raioMaior" class="form-label">Informe o raio do circulo maior:</label>
+                <label for="raioMaior" class="form-label">Informe o raio maior:</label>
                 <input type="number" id="raioMaior" class="form-control">
             </div>
 
             <div class="mb-3">
-                <label for="anguloCentral" class="form-label">Informe o ângulo central:</label>
+                <label for="angulo" class="form-label">Informe o ângulo:</label>
                 <input type="number" id="angulo" class="form-control">
-            </div>
-
-            <div class="mb-3">
-                <label for="raioSetor" class="form-label">Informe o raio do setor circular:</label>
-                <input type="number" id="raioSetor" class="form-control">
             </div>
 
             <div class="mb-3">
