--- a/pages/troncoDaPiramide.html
+++ b/pages/troncoDaPiramide.html
@@ -69,18 +69,18 @@
             <h3>Vamos calcular a área?</h3>
             <br>
             <div class="mb-3">
-                <label for="baseMaior" class="form-label">Base maior:</label>
-                <input type="number" id="baseMaior" class="form-control">
+                <label for="raioMaior" class="form-label">Raio maior: </label>
+                <input type="number" id="raioMaior" class="form-control">
             </div>
 
             <div class="mb-3">
-                <label for="baseMenor" class="form-label">Base menor:</label>
-                <input type="number" id="baseMenor" class="form-control">
+                <label for="raioMenor" class="form-label">Raio menor: </label>
+                <input type="number" id="raioMenor" class="form-control">
             </div>
 
             <div class="mb-3">
-                <label for="areaLateral" class="form-label">Área lateral:</label>
-                <input type="number" id="areaLateral" class="form-control">
+                <label for="altura" class="form-label">Altura: </label>
+                <input type="number" id="altura" class="form-control">
             </div>
 
             <div class="mb-3">
