--- a/pages/troncoDaPiramide.html
+++ b/pages/troncoDaPiramide.html
@@ -17,8 +17,7 @@
 
 <body background="../assets/img/images/fundo.jpg">
     <div class="container-md">
-        <h2>Tronco da pirâmide: sólido formado por uma secção transversal, <br> paralela à base, com faces laterais
-            trapezoidais e bases poligonais.</h2>
+        <h2>Tronco da pirâmide</h2>
         <img src="../assets/img/icons/pyramid.png">
         <div class="conteudoText">
             <h3>O Tronco da Pirâmide: Uma Forma Geométrica Distinta</h3>
