--- a/pages/circulo.html
+++ b/pages/circulo.html
@@ -17,7 +17,7 @@
 
 <body background="../assets/img/images/fundo.jpg">
     <div class="container-md">
-        <h2>Círculo: Praticar o uso da constante π (pi) e a potenciação.</h2>
+        <h2>Círculo</h2>
         <img src="../assets/img/icons/circulo.png">
         <div class="conteudoText">
             <h3>O Círculo: Uma Forma Geométrica Fundamental</h3>
