--- a/pages/retangulo.html
+++ b/pages/retangulo.html
@@ -17,8 +17,7 @@
 
 <body background="../assets/img/images/fundo.jpg">
     <div class="container-md">
-        <h2>Tronco da pirâmide: sólido formado por uma secção transversal, <br> paralela à base, com faces laterais
-            trapezoidais e bases poligonais.</h2>
+        <h2>Retângulo</h2>
         <img src="../assets/img/icons/retangulo.png">
         <div class="conteudoText">
             <h3>O Retângulo: Uma Forma Geométrica Básica e Versátil</h3>
